package creational.factory_method;

/**
 * Interface com o contrato específico para armas.
 * @author <a href="mailto:jean.zanatta@unoesc.edu.br">Jean Luiz Zanatta</a>
 * @since 16/12/2021
 */
public interface Arma {

	TipoDeArma getTipoDeArma();
}
